--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ A { text-decoration:none }
 </TABLE>
 
 <p>
-<a href="CV.pdf">CV</a> | <a href="contact.html">Contact</a><br><br>
+<a href="cv.pdf">Detailed CV</a> | <a href="resume.pdf">One-page Resume</a><br><br> | <a href="https://www.linkedin.com/in/pranavkmr/">LinkedIn</a>
 
 </body>
 </html>
