updated info on homepage

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@ A { text-decoration:none }
    
     <TD VALIGN=TOP width=500>
     <font size="+2"><b>Pranav Kumar</b></font><br>
-    Senior Undergraduate<br>
-      <a href="http://www.iitk.ac.in/ee">Department of Electrical Engineering</a><br>
-      Minor in Computer Systems, <a href="http://www.cse.iitk.ac.in">Computer Science and Engineering</a><br>
-      <a href="http://www.iitk.ac.in">Indian Institute of Technology, Kanpur</a> (208016)<br>
-      India<br>
+    First Year Graduate Student<br>
+      <a href="http://www.ece.utexas.edu/">Department of Electrical and Computer Engineering</a><br>
+      <a href="https://www.utexas.edu">The University of Texas at Austin</a><br>
+<br>
+Working at the <a href="http://spark.ece.utexas.edu/">SPARK Research lab</a> as a Graduate Research Assistant under <a href="http://users.ece.utexas.edu/~tiwari/">Prof. Mohit Tiwari</a>.
     </TD>
   </TR>
 </TABLE>
