added somewhat detailed personal info

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ A { text-decoration:none }
       <a href="http://www.ece.utexas.edu/">Department of Electrical and Computer Engineering</a><br>
       <a href="https://www.utexas.edu">The University of Texas at Austin</a><br>
 <br>
-Working at the <a href="http://spark.ece.utexas.edu/">SPARK Research lab</a> as a Graduate Research Assistant under <a href="http://users.ece.utexas.edu/~tiwari/">Prof. Mohit Tiwari</a>.
+I'm working at the <a href="http://spark.ece.utexas.edu/">SPARK Research lab</a> as a Graduate Research Assistant under <a href="http://users.ece.utexas.edu/~tiwari/">Prof. Mohit Tiwari</a> and my research focuses on finding architectural solutions for security. To know more about my projects, browse through the links below.
     </TD>
   </TR>
 </TABLE>
