--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ I'm working at the <a href="http://spark.ece.utexas.edu/">SPARK Research lab</a>
 </TABLE>
 
 <p>
-<a href="cv.pdf">Detailed CV</a> | <a href="resume.pdf">One-page Resume</a> | <a href="https://www.linkedin.com/in/pranavkmr/">LinkedIn</a><br><br>
+<a href="resume.pdf">Resume</a> | <a href="https://www.linkedin.com/in/pranavkmr/">LinkedIn</a><br><br>
 
 </body>
 </html>
