--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@ A { text-decoration:none }
    
     <TD VALIGN=TOP width=500>
     <font size="+2"><b>Pranav Kumar</b></font><br>
-    First Year Graduate Student<br>
+    Second Year M.S. Student<br>
       <a href="http://www.ece.utexas.edu/">Department of Electrical and Computer Engineering</a><br>
       <a href="https://www.utexas.edu">The University of Texas at Austin</a><br>
 <br>
 I'm working at the <a href="http://spark.ece.utexas.edu/">SPARK Research lab</a> as a Graduate Research Assistant under <a href="http://users.ece.utexas.edu/~tiwari/">Prof. Mohit Tiwari</a> and my research focuses on finding architectural solutions for security. To know more about my projects, browse through the links below.
+<br>
+Currently in fall 2018, I am also TA-ing the graduate security course, Security at the Hardware-Software Interface.
     </TD>
   </TR>
 </TABLE>
