--- a/index.html
+++ b/index.html
@@ -26,30 +26,19 @@ A { text-decoration:none }
       <a href="https://www.utexas.edu">The University of Texas at Austin</a><br>
 <br>
 I'm working at the <a href="http://spark.ece.utexas.edu/">SPARK Research lab</a> as a Graduate Research Assistant under <a href="http://users.ece.utexas.edu/~tiwari/">Prof. Mohit Tiwari</a> and my research focuses on finding architectural solutions for security. To know more about my projects, browse through the links below.
-<br>
-Currently in fall 2018, I am also TA-ing the graduate security course, Security at the Hardware-Software Interface.
+<br><br>
+Currently, I am also TA-ing the graduate security course, Security at the Hardware-Software Interface.
+<br><br>
+Presently, I am looking for full-time positions in the field of computer architecture starting May 2019. Contact me at
+pranavkumar@utexas.edu in case of an availability.
+
+
     </TD>
   </TR>
 </TABLE>
 
 <p>
 <a href="resume.pdf">Resume</a> | <a href="https://www.linkedin.com/in/pranavkmr/">LinkedIn</a><br><br>
-<TABLE BORDER=0>
-  <TR>
-   
-    <TD VALIGN=TOP width=500>
-    <font size="+2"><b>Pranav Kumar</b></font><br>
-    Second Year M.S. Student<br>
-      <a href="http://www.ece.utexas.edu/">Department of Electrical and Computer Engineering</a><br>
-      <a href="https://www.utexas.edu">The University of Texas at Austin</a><br>
-<br>
-I'm working at the <a href="http://spark.ece.utexas.edu/">SPARK Research lab</a> as a Graduate Research Assistant under <a href="http://users.ece.utexas.edu/~tiwari/">Prof. Mohit Tiwari</a> and my research focuses on finding architectural solutions for security. To know more about my projects, browse through the links below.
-<br>
-Currently in fall 2018, I am also TA-ing the graduate security course, Security at the Hardware-Software Interface.
-    </TD>
-  </TR>
-</TABLE>
-
 
 </body>
 </html>
