--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ pranavkumar@utexas.edu in case of an availability.
 </TABLE>
 
 <p>
-<a href="resume.pdf">Resume</a> | <a href="https://www.linkedin.com/in/pranavkmr/">LinkedIn</a><br><br>
+<a href="resume.pdf">Resume</a> | <a href="https://www.linkedin.com/in/pranavkmr/">LinkedIn</a> | <a href="https://fb.com/pranav.kumar.121">Facebook</a><br><br>
 
 </body>
 </html>
