--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ A { text-decoration:none }
 <br>
 I'm working at the <a href="http://spark.ece.utexas.edu/">SPARK Research lab</a> as a Graduate Research Assistant under <a href="http://users.ece.utexas.edu/~tiwari/">Prof. Mohit Tiwari</a> and my research focuses on finding architectural solutions for security. To know more about my projects, browse through the links below.
 <br><br>
-Currently, I am also TA-ing the graduate security course, Security at the Hardware-Software Interface.
+I am currently the President of <a href="https://greece.ece.utexas.edu">UT Graduate ECE (GREECE) Student Organization</a>.  
 <br><br>
 Presently, I am looking for full-time positions in the field of computer architecture starting May 2019. Contact me at
 pranavkumar@utexas.edu in case of an availability.
